--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ tags:
   - jekyll
   - theme
   - netlify
-email: youremail@xyz.com
+email: info@xtapo.com
 disqus_username: disqus_username
 show_hero: true
 menu:
@@ -33,7 +33,7 @@ medium_username: medium_username
 
 
 # Posts Settings
-show_time_bar: true
+show_time_bar: false
 show_modal_on_exit: false
 show_modal_on_finish_post: true
 two_columns_layout: true
